--- a/keyterms/static/html/keyterms.html
+++ b/keyterms/static/html/keyterms.html
@@ -1,11 +1,26 @@
-<div class="keyterms_block xmodule_display xmodule_HtmlBlock">
-    <!--    
+<!-- Required meta tags -->
+<!-- <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
+
+<!-- Bootstrap CSS – Need to only pull in Collapse styling to avoid changes with CMS interface. -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+<div class="keyterms_block xmodule_display xmodule_HtmlBlock" style="margin-bottom: 300px">
+       
     <h1>Lesson Summary</h1>
     <div class="lessonsummary">{self.lessonsummary}</div>
     <br>
-    -->
+   
     <h1>Key Terms</h1>
     <p id="glossarymsg"></p>
-    <ul class="allKeytermsList">{self.keytermhtml}</ul>
-    <br><br><br><br><br><br><br><br><br>
+    <!-- <ul class="allKeytermsList">{self.keytermhtml}</ul> -->
+    <div class="accordion" id="allKeytermsList">
+        {self.keytermhtml}
+    </div>
 </div>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
