feat(keyterms): Removed build files, finished collapsible

--- a/keyterms/static/html/keyterms.html
+++ b/keyterms/static/html/keyterms.html
@@ -1,18 +1,15 @@
 <!-- Required meta tags -->
-<!-- <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
-
-<!-- Bootstrap CSS – Need to only pull in Collapse styling to avoid changes with CMS interface. -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <div class="keyterms_block xmodule_display xmodule_HtmlBlock" style="margin-bottom: 300px">
-       
+
     <h1>Lesson Summary</h1>
     <div class="lessonsummary">{self.lessonsummary}</div>
     <br>
-   
+
     <h1>Key Terms</h1>
-    <p id="glossarymsg"></p>
+    <p class="glossarymsg"></p>
     <!-- <ul class="allKeytermsList">{self.keytermhtml}</ul> -->
     <div class="accordion" id="allKeytermsList">
         {self.keytermhtml}
