--- a/keyterms/static/html/keytermsstudio.html
+++ b/keyterms/static/html/keytermsstudio.html
@@ -1,9 +1,10 @@
-
-<h1>Lesson Summary</h1>
+<!--
+<h1>
+    Lesson Summary</h1>
 <br>
 <textarea class="lesson-field" placeholder="Enter Lesson Summary" id="editing" spellcheck="false">{self.lessonsummary}</textarea>
-<input class="editLessonSummary btn" type="button" value="Save">  
-
+<input class="editLessonSummary save-btn" type="button" value="Save">
+-->
 
 
 <br>
@@ -26,7 +27,7 @@
                                 <label for="id_keyterms_input">
                                 <span class="help-tooltip search-label-icon" title="Type into this box to filter down the list of available keyterms.">
                                 </span>
-                                </label> 
+                                </label>
                                 <input type="text" placeholder="Filter" id="id_keyterms_input">
                             </p>
 
@@ -53,9 +54,7 @@
                 </div>
             </div>
             <div class="help">
-                Hold down "Control", or "Command" on a Mac, to select more than one. <br>
-                Shift click an option to select all between the previously selected option. <br>
-                Double click to add a single option quickly.
+                Hold down "Control", or "Command" on a Mac, to select more than one. <br> Shift click an option to select all between the previously selected option. <br> Double click to add a single option quickly.
             </div>
         </div>
     </fieldset>
@@ -66,9 +65,4 @@
 
 <h2>Lesson Summary</h2>
 <div class="lessonsummary">{self.lessonsummary}</div>
-<br> 
-
-
-<h2>Key Terms</h2>
-<p>Click on or hover the term to reveal the definitions on the <a href="">Glossary</a> page.</p>
-<ul class="allKeytermsList">{self.keytermhtml}</ul>
+<br>
