fix(key-terms): Removing popover commented code and adding minor styling changes for collapse.

--- a/keyterms/static/html/keytermsstudio.html
+++ b/keyterms/static/html/keytermsstudio.html
@@ -63,6 +63,6 @@
 <h1>Preview</h1>
 <br>
 
-<h2>Lesson Summary</h2>
+<!-- <h2>Lesson Summary</h2>
 <div class="lessonsummary">{self.lessonsummary}</div>
-<br>
+<br> -->
