--- a/keyterms/static/html/keyterms.html
+++ b/keyterms/static/html/keyterms.html
@@ -2,22 +2,16 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<div class="keyterms_block xmodule_display xmodule_HtmlBlock" style="margin-bottom: 300px">
+<div class="keyterms_block xmodule_display xmodule_HtmlBlock">
 
-    <h1>Lesson Summary</h1>
+    <!-- <h1>Lesson Summary</h1>
     <div class="lessonsummary">{self.lessonsummary}</div>
-    <br>
+    <br> -->
 
-    <h1>Key Terms</h1>
+    <h3 class="hd hd-3">Key Terms</h3>
     <p class="glossarymsg"></p>
     <!-- <ul class="allKeytermsList">{self.keytermhtml}</ul> -->
     <div class="accordion" id="allKeytermsList">
         {self.keytermhtml}
     </div>
 </div>
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
